--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #f8f8f8;
     color: #333;
     margin: 0;
     padding: 0;
@@ -12,9 +12,17 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #fff;
     padding: 20px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2, h3, h4 {
+    color: #0066cc;
+}
+
+p {
+    line-height: 1.5;
 }
 
 .menu {
@@ -24,105 +32,83 @@ header {
 }
 
 .logo {
+    font-size: 1.5em;
     text-decoration: none;
-    color: #fff;
-    font-size: 24px;
-    font-weight: bold;
+    color: #0066cc;
 }
 
-.menu-icono {
-    display: none;
-}
-
-.menu-icono img {
-    width: 30px;
-    height: 30px;
+.menu-icon {
     cursor: pointer;
+    font-size: 1.8em;
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-.nabar {
+.menu-icon:hover {
+    transform: scale(1.1);
+    color: #004080;
+}
+
+.navbar {
+    display: none;
+    width: 100%;
+}
+
+.menu input:checked + .navbar {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
-nav ul {
+.navbar ul {
     list-style: none;
+    padding: 0;
     margin: 0;
-    padding: 0;
-    display: flex;
 }
 
-nav ul li {
-    margin-right: 20px;
-}
-
-h1, h3, h4 {
-    color: #333;
-}
-
-p {
-    line-height: 1.6;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-ul li {
+.navbar li {
     margin-bottom: 10px;
+}
+
+.navbar a {
+    color: #0066cc;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+.navbar a:hover {
+    text-decoration: underline;
+    color: #004080;
 }
 
 img {
     max-width: 100%;
     height: auto;
+    border-radius: 8px;
+    transition: transform 0.3s ease-in-out;
+}
+
+img:hover {
+    transform: scale(1.1);
 }
 
 video, audio {
     width: 100%;
-    margin-top: 20px;
+    max-height: 300px;
+    border-radius: 8px;
 }
 
-a {
-    color: #007bff;
-    text-decoration: none;
+h4 {
+    color: #555;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
-/* Media Query para un diseño responsive */
-@media screen and (max-width: 768px) {
-    .menu {
-        flex-direction: column;
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
     }
-
-    .menu-icono {
-        display: block;
-    }
-
-    .nabar {
-        display: none;
-        width: 100%;
-        text-align: center;
-        position: absolute;
-        top: 70px;
-        left: 0;
-        background-color: #333;
-    }
-
-    .nabar ul {
-        flex-direction: column;
-        padding: 10px;
-    }
-
-    .nabar ul li {
-        margin: 10px 0;
-    }
-
-    input[type="checkbox"]:checked + .nabar {
-        display: flex;
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
